# DETR-from-scratch

./: .gitignore  README.md  pyproject.toml
configs/: fiftyone_viewer.yaml
notebooks/: fine-tuning_detr-resnet50.ipynb  scratch_detr-resnet50.ipynb  scratch_rtdetr.ipynb
notes/: fine-tuning_detr-resnet50.ipynb  scratch_detr-resnet50.ipynb
scripts/: fiftyone_viewer.py  finetune_deformable_detr.py  finetune_rt_detr.py  train_detr.py
src/: config.py  data.py  dataset.py  model.py  models.py  utils.py
