[project]
name = "scratch-detr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "nbconvert>=7.0.0",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.6",
    "pycocotools>=2.0.10",
    "pytorch-lightning>=2.5.5",
    "scipy>=1.16.2",
    "timm>=1.0.20",
    "transformers>=4.56.2",
    "torch",
    "torchvision",
    "torchaudio",
    "autoroot>=1.0.1",
    "autorootcwd>=1.0.1",
    "fiftyone>=1.9.0",
    "supervision>=0.26.1",
    "rfdetr>=1.2.1",
    "torchmetrics>=1.8.2",
    "torchinfo>=1.8.0",
    "tensorboard>=2.20.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true 

[tool.uv.sources]
torchaudio = [{ index = "pytorch-cu124" }]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]
